# connx

./: .clang-format  .editorconfig  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build.sh
docs/: macos-port-design.md
docs/superpowers/plans/: 2026-05-01-macos-port.md
example/: client_c.c  client_cc.cc  server.cc
include/connx/: c.h  client.h  codec.h  connx.h  export.h  options.h
include/connx/codec/: delimiter_codec.h  fixed_length_codec.h  length_field_codec.h
src/bridge/: c.cc  client.cc  log.cc
src/codec/: delimiter_codec.cc  fixed_length_codec.cc  length_field_codec.cc
src/core/: init.cc  library.cc  library.h
src/net/: client_connection.cc  client_connection.h  client_connection_posix.cc  client_connection_win32.cc  clientimpl.cc  clientimpl.h  clientimpl_linux.cc  clientimpl_macos.cc  clientimpl_win32.cc  connect_timeout.cc  connect_timeout.h  connection_id.h  connection_table.cc  connection_table.h  poller.h  poller_kqueue.cc  poller_linux.cc  poller_win32.cc  resolve_address.cc  resolve_address.h  runtime.cc  runtime.h  sockaddr.h  socket_util.cc  socket_util.h  timer_queue.cc  timer_queue.h  worker_pool.cc  worker_pool.h
src/utils/: atomic.h  endian.h  log.h  mpscq.cc  mpscq.h  refcounted.h  slice.cc  slice.h  slice_buffer.cc  slice_buffer.h  status.cc  status.h  string.cc  string.h  sync.cc  sync.h  time.cc  time.h  useful.h
test/: test_c_api.cc  test_codec.cc  test_cpp_ownership.cc  test_integration.cc  test_log_seqlock.cc  test_refcounted.cc  test_slice.cc  test_slice_buffer.cc  test_sync.cc  test_worker_pool.cc  testutil.cc  testutil.h
test/support/: echoserver.cc  echoserver.h
test/util/: testutil.cc  testutil.h
